Index View Book List

--- a/BookListMVC/Views/Books/Index.cshtml
+++ b/BookListMVC/Views/Books/Index.cshtml
@@ -1,7 +1,27 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
+﻿<br />
+<div class="container row p-0 m-0">
+    <div class="col-6">
+        <h2 class="text-info">Book List</h2>
+    </div>
+    <div class="col-3 offset-3">
+        <a asp-action="Upsert" asp-controller="Books" class="btn btn-info form-control text-white">
+            Add New Book
+        </a>
+    </div>
+    <div class="col-12 border p-3" >
+        <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Author</th>
+                    <th>ISBN</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+</div> 
+
+@section Scripts{ 
+<script src="~/js/bookList.js"></script>
 }
-
-<h1>Index</h1>
-
